make website responsive, fix spacing, buttons, and content

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -31,19 +31,25 @@
 }
 
 @mixin bp-medium {
-  @media only screen and (min-width: 992px) and (max-width: 1195px) {
+  @media only screen and (min-width: 992px) and (max-width: 1200px) {
     @content;
   }
 }
 
 @mixin bp-small {
-  @media only screen and (min-width: 770px) and (max-width: 990px) {
+  @media only screen and (min-width: 770px) and (max-width: 992px) {
     @content;
   }
 }
 
 @mixin bp-xsmall {
-  @media only screen and (max-width: 768px) {
+  @media only screen and (min-width: 600px) and (max-width: 770px) {
+    @content;
+  }
+}
+
+@mixin bp-xxsmall {
+  @media only screen and (max-width: 600px) {
     @content;
   }
 }
